--- a/src/index.css
+++ b/src/index.css
@@ -91,10 +91,10 @@ main .left {
 
 }
 
-.web-logo:hover {
+/* .web-logo:hover {
   transform: scale(1.5);
   transition: 0.3s all linear;
-}
+} */
 
 .left h1 {
   font-size: 3.8rem;
