--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,35 @@ nav {
 
 }
 
+.pro_section {
+  width: 90%;
+  min-height: 100vh;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.pro_mid {
+  width: 100%;
+  min-height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 60px;
+}
+
+.pro_subSection {
+  width: 500px;
+  min-height: 300px;
+
+}
+
+.pro_subSection img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .navbar-expand-lg .navbar-nav .nav-link {
   color: var(--colorwhite);
   font-size: 18px;
@@ -557,8 +586,8 @@ footer {
 }
 
 .card-3 {
-  width: 330px;
-  min-height: 250px;
+  width: 500px;
+  min-height: 200px;
   background-color: var(--white);
   border-left: 80px solid var(--Dcolor);
   margin: 3%;
@@ -569,7 +598,7 @@ footer {
 }
 
 .card-3:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition: 0.4s linear;
 }
 
